--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
   "name": "angular2-test-work",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.html",
+  "private": true,
+  "description": "Example project from an angular.io guide.",
   "scripts": {
-    "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline --config ./configs/webpack.dev.js"
+    "start": "webpack-dev-server --inline --progress --port 8080",
+    "test": "karma start karma.webpack.conf.js",
+    "build": "rimraf dist && webpack --config config/webpack.prod.js --bail",
+    "lint": "tslint ./src/**/*.ts -t verbose"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Organizzzm/angular2-test-work.git"
-  },
-  "author": "Dmitry Zakharov",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Organizzzm/angular2-test-work/issues"
-  },
-  "homepage": "https://github.com/Organizzzm/angular2-test-work#readme",
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
     "@angular/common": "~4.0.0",
     "@angular/compiler": "~4.0.0",
+    "@angular/compiler-cli": "~4.0.0",
     "@angular/core": "~4.0.0",
     "@angular/forms": "~4.0.0",
     "@angular/http": "~4.0.0",
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
+    "@angular/platform-server": "~4.0.0",
     "@angular/router": "~4.0.0",
-    "angular-in-memory-web-api": "~0.3.0",
+    "@angular/tsc-wrapped": "~4.0.0",
+    "@angular/upgrade": "~4.0.0",
+    "angular-in-memory-web-api": "~0.3.1",
     "bootstrap": "4.0.0-alpha.6",
+    "compression-webpack-plugin": "^0.4.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.1",
     "zone.js": "^0.8.4"
@@ -34,22 +35,40 @@
   "devDependencies": {
     "@angularclass/hmr": "^1.2.2",
     "@angularclass/hmr-loader": "^3.0.2",
-    "@types/node": "^7.0.12",
+    "@ngtools/webpack": "^1.3.1",
+    "@types/jasmine": "2.5.36",
+    "@types/node": "^6.0.45",
     "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^3.1.2",
+    "awesome-typescript-loader": "^3.0.4",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
+    "jasmine": "~2.4.1",
+    "jasmine-core": "~2.4.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.1",
+    "lodash": "^4.16.2",
     "node-sass": "^4.5.2",
+    "null-loader": "^0.1.1",
+    "phantomjs-prebuilt": "^2.1.7",
+    "protractor": "~4.0.14",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.4",
     "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1",
-    "to-string-loader": "^1.1.5",
+    "style-loader": "^0.13.1",
+    "tslint": "^3.15.1",
     "typescript": "~2.2.0",
-    "webpack": "2.3.1",
-    "webpack-dev-server": "^2.4.2",
-    "webpack-merge": "^4.1.0"
-  }
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.4.1",
+    "webpack-merge": "^3.0.0"
+  },
+  "repository": {}
 }
