--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "@types/jasmine": "2.5.36",
     "@types/node": "^6.0.45",
     "angular-router-loader": "^0.6.0",
-    "angular2-router-loader": "^0.3.5",
+    "angular2-router-loader": "0.2.2",
     "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "3.0.0-beta.17",
+    "awesome-typescript-loader": "^3.1.3",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
     "file-loader": "^0.9.0",
