--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angularclass/hmr": "^1.2.2",
     "@angularclass/hmr-loader": "^3.0.2",
     "@ngtools/webpack": "^1.3.1",
-    "@types/jasmine": "2.5.36",
+    "@types/jasmine": "^2.5.47",
     "@types/node": "^6.0.45",
     "angular-router-loader": "^0.6.0",
     "angular2-router-loader": "0.2.2",
